--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 
 <body>
     <header>
+    <a href="index.html">
     <h1>Fantasy Fans Lighthouse</h1>
+     </a>
+    
+    <nav>
+    <ul>
+    <li><h2>Home</h2></li>
+    <li><h2>Activities</h2></li>
+    <li><h2>Sign up</h2></li>
+    </ul>
+    </nav>
+    </header>
     </header>
     <section>
     
