cover-text-image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
-      <link rel="stylesheet" href="assets/style.css" type="text/css"/>
+      <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <title>Fantasy Fans Lighthouse Project</title>
   
 </head>
@@ -24,20 +24,19 @@
     </ul>
     </nav>
     </header>
-    </header>
-    <section class="hero-image">
-    <div id="hero-image"> </div>
-    <div id="hero-text">
-			<h2> <H2>WHY JOIN US</H2>
+    <section class="cover-text">
+    <div id="hero-image">
+			<h2>WHY JOIN US</h2>
 			<h3>Stay Ahead of the crowd</h3>
             <p>Members share sniffed out new releases and access to latest entertainment.</p>
             <h3>Meet Like Minded People</h3>
             <p>No more strange looks when you’re weeping over the death of a beloved dragon.</p>
             <h3>Discounted Group Tours</h3>
             <p>Currently the Belfast winter & summer Game of Thrones tours, with more on the way.</p>
-        
+    </div>
 		</div>
   </section>
+
     <section>
     
     </section>
