--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
 <body>
     <header>
-    <a href="index.html">
-    <h1>Fantasy Fans Lighthouse</h1>
+    <div class="row">
+    <a href="index.html" class="col-md-8 logo">
+    <h1 id="logo">Fantasy Fans Lighthouse</h1>
      </a>
-    
+<div class="col-md-4">
     <nav>
-    <ul>
+    <ul id="menu">
     <li><h2>Home</h2></li>
     <li><h2>Activities</h2></li>
     <li><h2>Sign up</h2></li>
     </ul>
     </nav>
+</div>
     </header>
     <section class="cover-text">
     <div id="hero-image">
