--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
 
 <body>
     <header>
-    <div class="row">
-    <a href="index.html" class="col-md-8 logo">
-    <h1 id="logo">Fantasy Fans Lighthouse</h1>
-     </a>
-<div class="col-md-4">
-    <nav>
-    <ul id="menu">
-    <li><h2>Home</h2></li>
-    <li><h2>Activities</h2></li>
-    <li><h2>Sign up</h2></li>
-    </ul>
-    </nav>
-</div>
+        <div class="container-fluid">
+            <div class="row">
+                <a href="index.html" class="col-12 col-md-12 col-lg-6 logo">
+                <h1 id="logo">Fantasy Fans Lighthouse</h1>
+                </a>            
+            <div class="col 12 col-md-12 col-lg-6">
+                <nav>
+                    <ul id="menu">
+                        <li><h2>Home</h2></li>
+                        <li><h2>Activities</h2></li>
+                        <li><h2>Sign up</h2></li>
+                    </ul>
+                </nav>
+            </div>
+            </div>
+        </div>
     </header>
     <section class="cover-text">
     <div id="hero-image">
