--- a/activities.html
+++ b/activities.html
@@ -55,26 +55,28 @@
    <section class="gamers">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">			
+            <div class="col-12 col-md-12 col-lg-6">		
+            <div class="w-100 d-none d-md-block"></div>	
 			<h3>Gamers</h3>
             <p>We wouldn't forget about you. Sign in to get our monthly news letters about upcoming tech and games and reviews on what's already out there. Stay ahead of the games and send us your email </p>
          </div>
         </div>
     </div>
-	
-  </section>
    </section>
+   
    <section class="group-tours">
     <div class="container">
         <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">			
+            <div class="col-12 col-md-12 col-lg-6">
+            <div class="w-100 d-none d-md-block">	
 			<h3>Group Tours</h3>
             <p>5% group discounts on winter and summer tours in Belfast. Send us your email for a once in a lifetime experience you'll never forget and we'll send you the details </p>
+            </div>	
             </div>
         </div>
     </div>
-	
   </section>
+
     <footer>
     
     </footer>
