--- a/index.html
+++ b/index.html
@@ -7,22 +7,29 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
       <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <title>Fantasy Fans Lighthouse Project</title>
-  
 </head>
 
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row">
-                <a href="index.html" class="col-12 col-md-12 col-lg-6 logo">
-                <h1 id="logo">Fantasy Fans Lighthouse</h1>
-                </a>            
+    <div class="container-fluid">
+        <div class="row">
+            <a href="index.html" class="col-12 col-md-12 col-lg-6 logo">
+            <h1 id="logo">Fantasy Fans Lighthouse</h1>
+            </a>            
             <div class="col 12 col-md-12 col-lg-6">
                 <nav>
                     <ul id="menu">
-                        <li><h2>Home</h2></li>
-                        <li><h2>Activities</h2></li>
-                        <li><h2>Sign up</h2></li>
+                     <li>
+                     <a href="sign-up.html">Sign Up</a>
+                     </li>
+
+                     <li>
+                        <a href="activities.html">Activities</a>
+                    </li>
+                    
+                    <li>
+                        <a class="active" href="index.html"> Home </a>
+                    </li>
                     </ul>
                 </nav>
             </div>
