--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
 <body>
     <header>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <a href="index.html" class="col-12 col-md-12 col-lg-6 logo">
             <h1 id="logo">Fantasy Fans Lighthouse</h1>
             </a>            
             <div class="col 12 col-md-12 col-lg-6">
                 <nav>
-                    <ul id="menu">
-                     <li>
+                    <ul id="menu" class="list-inline">
+                     <li class="list-inline-item">
                      <a href="sign-up.html">Sign Up</a>
                      </li>
 
-                     <li>
+                     <li class="list-inline-item">
                         <a href="activities.html">Activities</a>
                     </li>
                     
-                    <li>
+                    <li class="list-inline-item">
                         <a class="active" href="index.html"> Home </a>
                     </li>
                     </ul>
