--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row">
             <a href="index.html" class="col-12 col-md-12 col-lg-6 logo">
-            <h1 id="logo">Fantasy Fans Lighthouse</h1>
+            <h1 id="logo" class="list-inline">Fantasy Fans Lighthouse</h1>
             </a>            
             <div class="col 12 col-md-12 col-lg-6">
                 <nav>
