--- a/sign-up.html
+++ b/sign-up.html
@@ -14,7 +14,7 @@
 <body>
     <header>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row no-gutters">
             <a href="index.html" class="col-12 col-md-12 col-lg-6 logo">
             <h1 id="logo">Fantasy Fans Lighthouse</h1>
             </a>            
