--- a/index.html
+++ b/index.html
@@ -58,14 +58,22 @@
     <section>
     
     </section>
-    <footer> 
-    <ul class="social-networks"> 
-			<li><a href="https://www.facebook.com"  target="_blank"><i class="fab fa-facebook-square"></i> </a> </li>
-			<li><a href="https://www.twitter.com"  target="_blank"><i class="fab fa-twitter-square"></i> </a> </li>
-			<li><a href="https://www.youtube.com"  target="_blank"><i class="fab fa-youtube-square"></i> </a> </li>
-			<li><a href="https://www.instagram.com"  target="_blank"><i class="fab fa-instagram"></i> </a> </li>
-		</ul>
-  </footer>
+    <footer class="container-fluid">
+ 
+    <div class="row">
+    <div class="col-sm-4"> 
+    <h5 class="uppercase general-sub">About</h5>
+    </div>
+    <div class="col-sm-4">
+    <h5 class="uppercase general-sub">Download</h5>
+    </div>
+    <div class="col-sm-4">
+    <h5 class="uppercase general-sub">Social</h5>
+  
+    </div>
+    </div>
+   
+    </footer>
     
 </body>
 </html>
