--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
-      <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Fantasy Fans Lighthouse Project</title>
 </head>
 
 <body>
     <header>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row no-gutters">
             <a href="index.html" class="col-12 col-md-6 col-lg-6 text-right logo">
             <h1 id="logo" class="list-inline text-right">Fantasy Fans Lighthouse</h1>
@@ -39,7 +40,7 @@
     <section class="cover-text">
     
     <div id="hero-image">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row no-gutters">
             <div class="col-12 col-md-12 col-lg-12 text-right">
 			<h2>WHY JOIN US</h2>
