amended heading code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
     <div class="container-fluid">
         <div class="row no-gutters">
-            <a href="index.html" class="col-12 col-md-6 col-lg-6 text-right logo">
+            <a href="index.html" class="col-sm-1 col-md-2 text-right logo">
             <h1 id="logo" class="list-inline text-right">Fantasy Fans Lighthouse</h1>
             </a>            
             <div class="col 12 col-md-6 col-lg-6">
