--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="main-heading">Fantasy Fans Lighthouse</h1>
             </a>            
         
-                    <ul class="list-inline header-links justify-text-right">
+                    <ul class="list-inline header-links text-right">
                      <li class="list-inline-item">
                      <a class="active" href="sign-up.html">Sign Up</a>
                      </li>
