--- a/sign-up.html
+++ b/sign-up.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
       <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <title>Fantasy Fans Lighthouse Project</title>
   
@@ -13,31 +14,23 @@
 
 <body>
     <header>
-    <div class="container-fluid">
-        <div class="row no-gutters">
-            <a href="index.html" class="col-12 col-md-12 col-lg-6 logo">
-            <h1 id="logo">Fantasy Fans Lighthouse</h1>
-            </a>            
-            <div class="col 12 col-md-12 col-lg-6">
-                <nav>
-                    <ul id="menu" class="list-inline">
-                     <li class="list-inline-item">
-                     <a href="sign-up.html">Sign Up</a>
-                     </li>
-
-                     <li class="list-inline-item">
-                        <a href="activities.html">Activities</a>
-                    </li>
-                    
-                    <li class="list-inline-item">
-                        <a class="active" href="index.html"> Home </a>
-                    </li>
-                    </ul>
-                </nav>
-            </div>
-            </div>
-        </div>
-    </header>
+    <a href="index.html"> 
+		<h2 id="main-heading">Fantasy Fans Lighthouse</h2>
+	</a>
+   <nav> 
+		 <ul id="header-links">
+			 <li>
+				 <a href="Sign Up"> Sign Up </a>
+			 </li>
+			 <li>
+				 <a href="activities.html"> Activities </a>
+			 </li>
+			 <li>
+				 <a class="active" href="index.html"> Home </a>
+			 </li>
+		 </ul>
+   </nav>
+   </header>
     <section>
     
     </section>
