--- a/activities.html
+++ b/activities.html
@@ -12,73 +12,70 @@
 
 <body>
     <header>
-        <div class="container-fluid">
-            <div class="row">
-                <a href="index.html" class="col-12 col-md-12 col-lg-6 logo">
-                <h1 id="logo">Fantasy Fans Lighthouse</h1>
-                </a>            
-            <div class="col 12 col-md-12 col-lg-6">
-                <nav>
-                    <ul id="menu">
-                        <li><h2>Home</h2></li>
-                        <li><h2>Activities</h2></li>
-                        <li><h2>Sign up</h2></li>
-                    </ul>
-                </nav>
-            </div>
-            </div>
-        </div>
-    </header>
-    <section class="movies">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">			
-			<h3>Zoom Movie Nights</h3>
-            <p>Get the popcorn out. Every Friday we meet via zoom to watch one of 5 movies. We text/email you the list and you Sign in to the movie of your choice and stay tuned in to discuss it afterwards. </p>
-            </div>
-        </div>
-    </div>
-	
-  </section>
+    <a href="index.html"> 
+		<h2 id="main-heading">Fantasy Fans Lighthouse</h2>
+	</a>
+   <nav> 
+		 <ul id="header-links">
+			 <li>
+				 <a href="Sign Up"> Sign Up </a>
+			 </li>
+			 <li>
+				 <a href="activities.html"> Activities </a>
+			 </li>
+			 <li>
+				 <a class="active" href="index.html"> Home </a>
+			 </li>
+		 </ul>
+   </nav>
+   </header>
 
-    <section class="chat-rooms">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">			
-			<h3>Zoom Chat Rooms</h3>
-            <p>Catch up with fantasy fans on the latest and greatest every Saturday afternoon from3pm to 4pm. We set you up in randomly selected zoom chat groups of no more than 10 to talk about anything fantasy related you like. Great way to meet like minded people. Send us your mobile below number below and we'll text you Sign in details every Saturday at 10am.</p>
-               </div>
+<section>
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-12 movies">			
+			<h3>Zoom Movie Nights</h3>
+            <p>Get the popcorn out. Every Friday at 9pm we meet via zoom to watch one of 5 movies. We text/email you the list on Wednesday and you Sign in 
+            to the movie of your choice and stay tuned in to discuss it afterwards. </p>
         </div>
     </div>
-	
-  </section>
-   <section class="gamers">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">		
-            <div class="w-100 d-none d-md-block"></div>	
+    </div>
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-12 chat-rooms">			
+			<h3>Zoom Chat Rooms</h3>
+            <p>Catch up with fantasy fans on the latest and greatest every Saturday afternoon from 3pm to 4pm. We set you up in randomly selected zoom 
+            chat groups of no more than 10 to talk about anything fantasy related you like. Great way to meet like minded people.</p>
+        </div>	
+	</div>
+    </div>
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-12 gamers">		
 			<h3>Gamers</h3>
             <p>We wouldn't forget about you. Sign in to get our monthly news letters about upcoming tech and games and reviews on what's already out there. Stay ahead of the games and send us your email </p>
-         </div>
         </div>
     </div>
-   </section>
-   
-   <section class="group-tours">
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-12 col-lg-6">
-            <div class="w-100 d-none d-md-block">	
+    </div>
+    <div class="container-fluid">
+    <div class="row">
+        <div class="col-12 group-tours">	
 			<h3>Group Tours</h3>
             <p>5% group discounts on winter and summer tours in Belfast. Send us your email for a once in a lifetime experience you'll never forget and we'll send you the details </p>
-            </div>	
-            </div>
-        </div>
+        </div>	
     </div>
-  </section>
+    </div>
+</section>
 
-    <footer>
-    
-    </footer>
+     <footer> 
+     <div class="footer">
+    <ul class="social-networks"> 
+			<li><a href="https://www.facebook.com"  target="_blank" alt="facebook link"><i class="fab fa-facebook-square"></i> </a> </li>
+			<li><a href="https://www.twitter.com"  target="_blank"><i class="fab fa-twitter-square"></i> </a> </li>
+			<li><a href="https://www.youtube.com"  target="_blank"><i class="fab fa-youtube-square"></i> </a> </li>
+			<li><a href="https://www.instagram.com"  target="_blank"><i class="fab fa-instagram"></i> </a> </li>
+		</ul>
+     </div>
+  </footer>
 </body>
 </html>
