--- a/activities.html
+++ b/activities.html
@@ -30,27 +30,25 @@
    </nav>
    </header>
 
+
 <section>
+   
     <div class="container-fluid">
-    <div class="row">
-        <div class="col-12 movies">			
-			<h3>Zoom Movie Nights</h3>
-            <p>Get the popcorn out. Every Friday at 9pm we meet via zoom to watch one of 5 movies. We text/email you the list on Wednesday and you Sign in 
-            to the movie of your choice and stay tuned in to discuss it afterwards. </p>
-        </div>
+    <div class="row activities">
+    <div id="activities-image"> </div>
     </div>
     </div>
     <div class="container-fluid">
-    <div class="row">
+    <div class="row activities">
+
         <div class="col-12 chat-rooms">			
 			<h3>Zoom Chat Rooms</h3>
-            <p>Catch up with fantasy fans on the latest and greatest every Saturday afternoon from 3pm to 4pm. We set you up in randomly selected zoom 
-            chat groups of no more than 10 to talk about anything fantasy related you like. Great way to meet like minded people.</p>
+            <p>Catch up with fantasy fans on the latest and greatest every Saturday afternoon from 3pm to 4pm. We set you up in randomly selected zoom chat groups of no more than 10 to talk about anything fantasy related you like. Great way to meet like minded people.</p>
         </div>	
 	</div>
     </div>
     <div class="container-fluid">
-    <div class="row">
+    <div class="row activities">
         <div class="col-12 gamers">		
 			<h3>Gamers</h3>
             <p>We wouldn't forget about you. Sign in to get our monthly news letters about upcoming tech and games and reviews on what's already out there. Stay ahead of the games and send us your email </p>
@@ -58,11 +56,20 @@
     </div>
     </div>
     <div class="container-fluid">
-    <div class="row">
+    <div class="row activities">
         <div class="col-12 group-tours">	
 			<h3>Group Tours</h3>
             <p>5% group discounts on winter and summer tours in Belfast. Send us your email for a once in a lifetime experience you'll never forget and we'll send you the details </p>
         </div>	
+    </div>
+    </div>
+     <div class="container-fluid">
+    <div class="row activities">
+        <div class="col-12 movies">			
+			<h3>Zoom Movie Nights</h3>
+            <p>Get the popcorn out. Every Friday at 9pm we meet via zoom to watch one of 5 movies. We text/email you the list on Wednesday and you Sign in 
+            to the movie of your choice and stay tuned in to discuss it afterwards. </p>
+        </div>
     </div>
     </div>
 </section>
