--- a/sign-up.html
+++ b/sign-up.html
@@ -32,10 +32,25 @@
    </nav>
    </header>
     <section>
-    
+    <div class="center-form">
+<form>
+<input type="text" name="name" id="Fullname" class="form-control" placeholder="Name" required>
+<input type="email" name="email" id="emailaddress" class="form-control" placeholder="Email" required>
+<textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project description" required> </textarea>
+<button type="submit" class="btn btn-secondary">Send project request</button>
+btn-secondary – is the bootstrap color class for the button
+</form>
+
     </section>
-    <footer>
-    
-    </footer>
+    <footer> 
+     <div class="footer">
+    <ul class="social-networks"> 
+			<li><a href="https://www.facebook.com"  target="_blank" alt="facebook link"><i class="fab fa-facebook-square"></i> </a> </li>
+			<li><a href="https://www.twitter.com"  target="_blank"><i class="fab fa-twitter-square"></i> </a> </li>
+			<li><a href="https://www.youtube.com"  target="_blank"><i class="fab fa-youtube-square"></i> </a> </li>
+			<li><a href="https://www.instagram.com"  target="_blank"><i class="fab fa-instagram"></i> </a> </li>
+		</ul>
+     </div>
+  </footer>
 </body>
 </html>
