--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://fontawesome.com/icons?d=gallery&q=chat&m=free" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Fantasy Fans Lighthouse Project</title>
 </head>
@@ -61,9 +62,9 @@
      <div class="footer">
     <ul class="social-networks"> 
 			<li><a href="https://www.facebook.com"  target="_blank" alt="facebook link"><i class="fab fa-facebook-square"></i> </a> </li>
-			<li><a href="https://www.twitter.com"  target="_blank"><i class="fab fa-twitter-square"></i> </a> </li>
-			<li><a href="https://www.youtube.com"  target="_blank"><i class="fab fa-youtube-square"></i> </a> </li>
-			<li><a href="https://www.instagram.com"  target="_blank"><i class="fab fa-instagram"></i> </a> </li>
+			<li><a href="https://www.twitter.com"  target="_blank" alt="twitter link"><i class="fab fa-twitter-square"></i> </a> </li>
+			<li><a href="https://www.youtube.com"  target="_blank" alt="youtube link"><i class="fab fa-youtube-square"></i> </a> </li>
+			<li><a href="https://www.instagram.com"  target="_blank" alt="instagram link"><i class="fab fa-instagram"></i> </a> </li>
 		</ul>
      </div>
   </footer>
