--- a/activities.html
+++ b/activities.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
+    <link rel="stylesheet" href="https://fontawesome.com/icons?d=gallery&q=chat&m=free" type="text/css"/>
       <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <title>Fantasy Fans Lighthouse Project</title>
   
@@ -18,7 +19,7 @@
    <nav> 
 		 <ul id="header-links">
 			 <li>
-				 <a href="Sign Up"> Sign Up </a>
+				 <a href="sign-up"> Sign Up </a>
 			 </li>
 			 <li>
 				 <a href="activities.html"> Activities </a>
@@ -29,55 +30,33 @@
 		 </ul>
    </nav>
    </header>
-
-
-<section>
    
-    <div class="container-fluid">
-    <div class="row activities">
-    <div id="activities-image"> </div>
+<section id="activities">
+    <div> 
+      <h2>Zoom Chat Rooms<i class="fas fa-rocketchat"></i></h2>
+      <p>Catch up with fantasy fans on the latest and greatest every Saturday afternoon from 3pm to 4pm. We set you up in randomly selected zoom chat groups of no more than 10 to talk about anything fantasy related you like. Great way to meet like minded people.</p>
     </div>
-    </div>
-    <div class="container-fluid">
-    <div class="row activities">
 
-        <div class="col-12 chat-rooms">			
-			<h3>Zoom Chat Rooms</h3>
-            <p>Catch up with fantasy fans on the latest and greatest every Saturday afternoon from 3pm to 4pm. We set you up in randomly selected zoom chat groups of no more than 10 to talk about anything fantasy related you like. Great way to meet like minded people.</p>
-        </div>	
-	</div>
-    </div>
-    <div class="container-fluid">
-    <div class="row activities">
-        <div class="col-12 gamers">		
-			<h3>Gamers</h3>
-            <p>We wouldn't forget about you. Sign in to get our monthly news letters about upcoming tech and games and reviews on what's already out there. Stay ahead of the games and send us your email </p>
-        </div>
-    </div>
-    </div>
-    <div class="container-fluid">
-    <div class="row activities">
-        <div class="col-12 group-tours">	
-			<h3>Group Tours</h3>
-            <p>5% group discounts on winter and summer tours in Belfast. Send us your email for a once in a lifetime experience you'll never forget and we'll send you the details </p>
-        </div>	
-    </div>
-    </div>
-     <div class="container-fluid">
-    <div class="row activities">
-        <div class="col-12 movies">			
-			<h3>Zoom Movie Nights</h3>
-            <p>Get the popcorn out. Every Friday at 9pm we meet via zoom to watch one of 5 movies. We text/email you the list on Wednesday and you Sign in 
+    <div> 
+      <h2>Zoom Movie Nights <i class="fas fa-video"></i> </h2>
+      <p>Get the popcorn out. Every Friday at 9pm we meet via zoom to watch one of 5 movies. We text/email you the list on Wednesday and you Sign in 
             to the movie of your choice and stay tuned in to discuss it afterwards. </p>
-        </div>
     </div>
+
+    <div> 
+      <h2>Group Tours <i class="fas fa-suitcase-rolling"></i></h2>
+      <p>5% group discounts on winter and summer tours in Belfast. Send us your email for a once in a lifetime experience you'll never forget and we'll send you the details </p>
     </div>
-</section>
+      <div> 
+      <h2>Gamers <i class="fas fa-tree"></i></h2>
+      <p>We wouldn't forget about you. Sign in to get our monthly news letters about upcoming tech and games and reviews on what's already out there. Stay ahead of the games and send us your email </p>
+    </div>
+  </section>
 
      <footer> 
      <div class="footer">
     <ul class="social-networks"> 
-			<li><a href="https://www.facebook.com"  target="_blank" alt="facebook link"><i class="fab fa-facebook-square"></i> </a> </li>
+			<li><a href="https://www.facebook.com"  target="_blank"><i class="fab fa-facebook-square"></i> </a> </li>
 			<li><a href="https://www.twitter.com"  target="_blank"><i class="fab fa-twitter-square"></i> </a> </li>
 			<li><a href="https://www.youtube.com"  target="_blank"><i class="fab fa-youtube-square"></i> </a> </li>
 			<li><a href="https://www.instagram.com"  target="_blank"><i class="fab fa-instagram"></i> </a> </li>
