--- a/index.html
+++ b/index.html
@@ -53,18 +53,14 @@
         </div>
 </div>
   </section>
-
-
-    <section>
     
-    </section>
      <footer> 
      <div class="footer">
     <ul class="social-networks"> 
-			<li><a href="https://www.facebook.com"  target="_blank" alt="facebook link"><i class="fab fa-facebook-square"></i> </a> </li>
-			<li><a href="https://www.twitter.com"  target="_blank" alt="twitter link"><i class="fab fa-twitter-square"></i> </a> </li>
-			<li><a href="https://www.youtube.com"  target="_blank" alt="youtube link"><i class="fab fa-youtube-square"></i> </a> </li>
-			<li><a href="https://www.instagram.com"  target="_blank" alt="instagram link"><i class="fab fa-instagram"></i> </a> </li>
+			<li><a href="https://www.facebook.com"  target="_blank"><i class="fab fa-facebook-square"></i> </a> </li>
+			<li><a href="https://www.twitter.com"  target="_blank"><i class="fab fa-twitter-square"></i> </a> </li>
+			<li><a href="https://www.youtube.com"  target="_blank"><i class="fab fa-youtube-square"></i> </a> </li>
+			<li><a href="https://www.instagram.com"  target="_blank"><i class="fab fa-instagram"></i> </a> </li>
 		</ul>
      </div>
   </footer>
