--- a/activities.html
+++ b/activities.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css"/>
-    <link rel="stylesheet" href="https://fontawesome.com/icons?d=gallery&q=chat&m=free" type="text/css"/>
+    <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icons/" type="text/css"/>
       <link rel="stylesheet" href="css/style.css" type="text/css"/>
     <title>Fantasy Fans Lighthouse Project</title>
   
@@ -19,7 +19,7 @@
    <nav> 
 		 <ul id="header-links">
 			 <li>
-				 <a href="sign-up"> Sign Up </a>
+				 <a href="sign-up.html"> Sign Up </a>
 			 </li>
 			 <li>
 				 <a href="activities.html"> Activities </a>
@@ -53,8 +53,14 @@
     </div>
   </section>
 
+<div id="container">
+   <div id="header"></div>
+   <div id="body"></div>
+   <div id="footer"></div>
+</div>
+
      <footer> 
-     <div class="footer">
+     <div>
     <ul class="social-networks"> 
 			<li><a href="https://www.facebook.com"  target="_blank"><i class="fab fa-facebook-square"></i> </a> </li>
 			<li><a href="https://www.twitter.com"  target="_blank"><i class="fab fa-twitter-square"></i> </a> </li>
