--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="https://fontawesome.com/icons?d=gallery&q=chat&m=free" type="text/css">
+    <link rel="stylesheet" href="https://fontawesome.com/v4.7.0/icons/" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>Fantasy Fans Lighthouse Project</title>
 </head>
@@ -21,7 +21,7 @@
    <nav> 
 		 <ul id="header-links">
 			 <li>
-				 <a href="Sign Up"> Sign Up </a>
+				 <a href="sign-up.html"> Sign Up </a>
 			 </li>
 			 <li>
 				 <a href="activities.html"> Activities </a>
@@ -35,10 +35,10 @@
 
 <section id="hero-outer">
 <div class="container-fluid">
-<div class="row">
-<div class="col-sm-12 col-md-4 col-lg-4">
+    <div class="row">
+        <div class="col-sm-12 col-md-4 col-lg-4">
 		<div id="cover-text"> 
-			<h3>WHY JOIN US</h4>
+			<h3>WHY JOIN US</h3>
 			<h4>Stay Ahead of the crowd</h4>
             <p>Members share sniffed out new releases and access to latest entertainment.</p>
             <h4>Meet Like Minded People</h4>
@@ -46,16 +46,21 @@
             <h4>Discounted Group Tours</h4>
             <p>Currently the Belfast winter & summer Game of Thrones tours, with more on the way.</p>
 		</div>
-        </div> 
-     <div class="col-sm-12 col-md-8 col-lg-8">
+       </div> 
+        <div class="col-sm-12 col-md-8 col-lg-8">
     <div id="hero-image"> </div>
-  
-        </div>
+    </div>   
+    </div>
 </div>
   </section>
-    
+<div id="container">
+   <div id="header"></div>
+   <div id="body"></div>
+   <div id="footer"></div>
+</div>
+
      <footer> 
-     <div class="footer">
+     <div>
     <ul class="social-networks"> 
 			<li><a href="https://www.facebook.com"  target="_blank"><i class="fab fa-facebook-square"></i> </a> </li>
 			<li><a href="https://www.twitter.com"  target="_blank"><i class="fab fa-twitter-square"></i> </a> </li>
